# autoware_launch

./: .gitignore  .pre-commit-config.yaml
autoware_launch/launch/: autoware.launch.xml  logging_simulator.launch.xml  planning_simulator.launch.xml
autoware_launch/rviz/: autoware.rviz
compensators_launch/: .gitignore  package.xml
control_launch/config/trajectory_follower/: mpc_follower.param.yaml  mpc_nonlinear.param.yaml
control_launch/launch/: control.launch.py  control.launch.xml  control_nmpc.launch.py
localization_launch/launch/util/: util.launch.py  util.launch.xml
observers_compensators_launch/: CMakeLists.txt  package.xml
observers_compensators_launch/launch/: communication_delay_compensator.launch.xml
observers_launch/: .gitignore  CMakeLists.txt  package.xml
observers_launch/launch/: backUps_communication_delay_compensator.launch.py  communication_delay_compansator.launch.py  communication_delay_compensator.launch.py  communication_delay_compensator.launch.xml  example.py
perception_launch/launch/: perception.launch.xml
perception_launch/launch/object_recognition/detection/: camera_lidar_fusion_based_detection.launch.xml  detection.launch.xml  lidar_based_detection.launch.xml
system_launch/config/: ad_service_state_monitor.param.yaml
vehicle_launch/launch/: vehicle_description.launch.xml
